# snakeCGP

./: .gitignore  CMakeLists.txt  README.md  geometryengine.cpp  geometryengine.h  main.cpp  mainwidget.cpp  mainwidget.h  options.cpp  options.h  resources.qrc  shaders.qrc  snakegeometry.cpp  snakegeometry.h  sounds.qrc  textures.qrc  ui_gameoverwidget.h  ui_helpwidget.h  ui_menuwidget.h  widgetstack.cpp  widgetstack.h
audio/: soundengine.cpp  soundengine.h
game/: gamewidget.cpp  gamewidget.h  mainwidget.cpp  mainwidget.h
geometries/: FoodGeometry.cpp  FoodGeometry.h  Skybox.cpp  Skybox.h  planegeometry.cpp  planegeometry.h  snakegeometry.cpp  snakegeometry.h  vertexData.h
menu/: gameoverwidget.ui  menuwidget.cpp  menuwidget.h  menuwidget.ui  options.cpp  options.h
shaders/: fplane.glsl  fshader.glsl  fskybox.glsl  vplane.glsl  vshader.glsl
widgets/: gameoverwidget.cpp  gameoverwidget.h  gameoverwidget.ui  gamewidget.cpp  gamewidget.h  helpwidget.cpp  helpwidget.h  helpwidget.ui  menuwidget.cpp  menuwidget.h  menuwidget.ui  numericallistitem.h  openglwidget.cpp  openglwidget.h  widgetstack.cpp  widgetstack.h
